2009-12-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Increase Version: to 0.2.0

	* src/setenv: Another small cleanup
	* inst/THANKS: Added Richard for all the initial help with Windows

	* src/RInside.cpp: Uncommented fpu_setup() for now

	* inst/doc/{html,man.latex}: Removed autogenerated doxygen files from
	  svn as they are too volatile, will remain in tarball as for Rcppccd 

2009-12-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/tools/RInsideEnvVars.r: Deal with slashed on Windows platform

2009-12-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Remove 'OS_type: unix' as we now build and run on Windoze
	* src/Makefile.win: src/RInside.h, src/RInside.cpp: Added support for
	  building on Windows using the standard MinGW toolchain
	* src/setenv.c: Windows implementation of setenv() kindly provided by
	  Richard Holbrey during earlier attempts to build on Windows
        * inst/examples/Makefile.win: Similarly Makefile for Windows examples

2009-12-12  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.cpp: Destructor does a few additional things as per the
	  R_Cleanup example in section 8.1.2 on 'Setting R callbacks'
	* src/RIinside.h: Added simple logTxt() to log if defined and not otherwise.

2009-10-01  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/rinside_sample5.cpp: Another examples based on r-devel post

2009-09-29  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/rinside_sample4.cpp: New example based on new r-devel post

2009-09-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Increase Version: to 0.1.1

	* inst/THANKS: Added new file to say Thank You! to contributors

	* inst/examples/Makefile: set R_HOME variable to output of 'R RHOME',
	  use R_HOME to call R as R_HOME/bin/R, use R instead of Rscript,
	  query R about CXX and CPPFLAGS, general editing and overhaul

	* inst/examples/*.cpp: More consistent formatting using Emacs 'M-x untabify'
